--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^8.0.0",
-    "@mantine/hooks": "^8.0.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "react": "^19.1.0",
