--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "motion": "^12.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
